fixed bug with header extending beyond other elements on mobile

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     align-items: center;
     padding: 15px 55px;
     background-color: #2E8BC0;
-    min-width: 1000px;
+    
 }
 
 .logo img {
